Add demenziell Erkrankter to create/update zone endpoints
Also flipped database relation ownership of Erkrankter and zone
